2010-05-30  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSTextView.m (NSTextViewUndoObject, -performUndo:,
	-shouldChangeTextInRange:replacementString:): Select text
	restored by an undo operation and set insertion point to the end
	of the changed text after a redo operation.

2010-05-30  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSTextView.m (-initWithFrame:, -initWithFrame:textContainer:):
	Ensure a more consistent initial setup of a new text view and its
	text container.

2010-05-30  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSTextView.m (-initWithCoder:, -initWithTextView:,
	-encodeWithCoder:): Fix decoding and encoding of a few text view
	flags, which did not match Cocoa.
	* Source/NSTextView.m (-initWithCoder:): Replace a completely
	bogus workaround to set up the text network of a text view loaded
	from a .nib file with a clean solution.

2010-05-30  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSTextContainer.m (-init:, -initWithCoder:): Use
	more reasonable initial container size.
	* Source/NSTextContainer.m (-initWithCoder:): Better decoding of
	text container flags.

2010-05-30  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSLayoutManager.m (-encodeWithCoder:, -initWithCoder:):
	Make layout manager attributes and flags persistent when using a
	keyed archiver, i.e., saving or loading a .nib file.

2010-05-29 12:00-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Source/NSSplitView.m: In mouseDown: initialize p and op to
	NSZeroPoint to prevent compiler warning.

2010-05-29 11:35-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Source/NSBitmapImageRep+PNG.m: Reverting change which removed
	check for setjmp.  This was causing a compilation error.

2010-05-29  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Headers/Additions/GNUstepGUI/GSNibLoading.h:
	* Source/NSButtonCell.m:
	* Source/NSMatrix.m:
	* Source/NSScrollView.m:
	* Source/NSTableView.m: Correct serious nib loading bug on big